[gd_scene load_steps=11 format=3 uid="uid://jtl76wwl1rc3"]

[ext_resource type="Script" uid="uid://cjewqht2u24r5" path="res://Scripts/NPCs/npc.gd" id="1_7lr2c"]
[ext_resource type="PackedScene" uid="uid://c08i34esip8iy" path="res://Scenes/UI/ui.tscn" id="2_n58mx"]
[ext_resource type="Script" uid="uid://n7717dlv2cxw" path="res://Scripts/Resources/Quest.gd" id="2_q0ilr"]

[sub_resource type="Resource" id="Resource_bsvs8"]
script = ExtResource("2_q0ilr")
metadata/_custom_type_script = "uid://n7717dlv2cxw"

[sub_resource type="CircleShape2D" id="CircleShape2D_7lr2c"]
radius = 42.047592

[sub_resource type="Animation" id="Animation_n58mx"]
resource_name = "FadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 15), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("UI:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_q0ilr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsvs8"]
_data = {
&"FadeIn": SubResource("Animation_n58mx"),
&"RESET": SubResource("Animation_q0ilr")
}

[sub_resource type="Gradient" id="Gradient_n58mx"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.34137386, 1)
colors = PackedColorArray(1, 1, 1, 0.627451, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n58mx"]
gradient = SubResource("Gradient_n58mx")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="NPC" type="Node2D"]
z_index = -2
script = ExtResource("1_7lr2c")
type = 1
quest = SubResource("Resource_bsvs8")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -34)
shape = SubResource("CircleShape2D_7lr2c")

[node name="UI" parent="." instance=ExtResource("2_n58mx")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bsvs8")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(5, 3)
color = Color(1, 1, 1, 0.34509805)
energy = 3.0
blend_mode = 2
shadow_color = Color(0, 0, 0, 0.54901963)
shadow_filter = 1
shadow_filter_smooth = 5.0
texture = SubResource("GradientTexture2D_n58mx")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
